# flight_autonomy

./: CMakeLists.txt  Doxyfile  Readme.md  build.sh  package.xml
docs/html/: FlightAutonomy_8cpp.html  FlightAutonomy_8cpp__incl.map  FlightAutonomy_8cpp__incl.md5  FlightAutonomy_8h.html  FlightAutonomy_8h__dep__incl.map  FlightAutonomy_8h__dep__incl.md5  FlightAutonomy_8h__incl.map  FlightAutonomy_8h__incl.md5  FlightAutonomy_8h_source.html  FlightControl_8cpp.html  FlightControl_8cpp__incl.map  FlightControl_8cpp__incl.md5  FlightControl_8h.html  FlightControl_8h__dep__incl.map  FlightControl_8h__dep__incl.md5  FlightControl_8h__incl.map  FlightControl_8h__incl.md5  FlightControl_8h_source.html  ImageReceiver_8cpp.html  ImageReceiver_8cpp__incl.map  ImageReceiver_8cpp__incl.md5  ImageReceiver_8h.html  ImageReceiver_8h__dep__incl.map  ImageReceiver_8h__dep__incl.md5  ImageReceiver_8h__incl.map  ImageReceiver_8h__incl.md5  ImageReceiver_8h_source.html  ObjectDetector_8cpp.html  ObjectDetector_8cpp__incl.map  ObjectDetector_8cpp__incl.md5  ObjectDetector_8h.html  ObjectDetector_8h__dep__incl.map  ObjectDetector_8h__dep__incl.md5  ObjectDetector_8h__incl.map  ObjectDetector_8h__incl.md5  ObjectDetector_8h_source.html  TelemetryData_8h.html  TelemetryData_8h__dep__incl.map  TelemetryData_8h__dep__incl.md5  TelemetryData_8h__incl.map  (+52 more)
docs/latex/: FlightAutonomy_8cpp.tex  FlightAutonomy_8cpp__incl.md5  FlightAutonomy_8h.tex  FlightAutonomy_8h__dep__incl.md5  FlightAutonomy_8h__incl.md5  FlightAutonomy_8h_source.tex  FlightControl_8cpp.tex  FlightControl_8cpp__incl.md5  FlightControl_8h.tex  FlightControl_8h__dep__incl.md5  FlightControl_8h__incl.md5  FlightControl_8h_source.tex  ImageReceiver_8cpp.tex  ImageReceiver_8cpp__incl.md5  ImageReceiver_8h.tex  ImageReceiver_8h__dep__incl.md5  ImageReceiver_8h__incl.md5  ImageReceiver_8h_source.tex  ObjectDetector_8cpp.tex  ObjectDetector_8cpp__incl.md5  ObjectDetector_8h.tex  ObjectDetector_8h__dep__incl.md5  ObjectDetector_8h__incl.md5  ObjectDetector_8h_source.tex  TelemetryData_8h.tex  TelemetryData_8h__dep__incl.md5  TelemetryData_8h__incl.md5  algorithms_8h.tex  (+31 more)
src/: FlightAutonomy.cpp  FlightControl.cpp  ImageReceiver.cpp  ObjectDetector.cpp  flight_autonomy_node.cpp  main.cpp
(+87 files in other folders)
